RESOLVED FIXED200591
[iOS 13] Google Docs/Slides/Sheets: paste often doesn't work and sometimes produces an error
https://bugs.webkit.org/show_bug.cgi?id=200591
Summary [iOS 13] Google Docs/Slides/Sheets: paste often doesn't work and sometimes pr...
Wenson Hsieh
Reported 2019-08-09 14:32:48 PDT
Attachments
Patch (7.36 KB, patch)
2019-08-09 14:41 PDT, Wenson Hsieh
no flags
Patch (5.71 KB, patch)
2019-08-09 15:40 PDT, Wenson Hsieh
thorton: review+
Wenson Hsieh
Comment 1 2019-08-09 14:41:55 PDT
Ryosuke Niwa
Comment 2 2019-08-09 14:53:03 PDT
Comment on attachment 375961 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375961&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:6826 > + switch (_focusedElementInformation.elementType) { > + case WebKit::InputType::Password: Either plain text field doesn't support pasting of an image, or all these could potentially support pasting of an image if we rely on page's scripts. r=me with this element type check removed as we discussed in person.
Wenson Hsieh
Comment 3 2019-08-09 15:38:16 PDT
Comment on attachment 375961 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375961&action=review >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:6826 >> + case WebKit::InputType::Password: > > Either plain text field doesn't support pasting of an image, > or all these could potentially support pasting of an image if we rely on page's scripts. > > r=me with this element type check removed as we discussed in person. Thanks for the review! I’ll need to adjust this patch a little more after some feedback from UIKit folks (moving the SPI to the UITextInputPrivate protocol instead)
Wenson Hsieh
Comment 4 2019-08-09 15:40:03 PDT
Wenson Hsieh
Comment 5 2019-08-09 16:07:02 PDT
Note You need to log in before you can comment on or make changes to this bug.